--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <header>
         <nav>
             <div class="logo">
-                <a href="#"><img src="../arlo.semantic/img/logo.png" alt=""></a>
+                <a href="#"><img src="img/logo.png" alt=""></a>
             </div>
             <div class="menu">
                 <ul>
@@ -64,7 +64,7 @@
             <div class="row d_flex">
                 <div class="col col40">
                     <div class="border">
-                        <img src="../arlo.semantic/img/michael.jpg" alt="">
+                        <img src="img/michael.jpg" alt="">
                     </div>
                 </div>
                 <div class="col col60">
